--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -2,4 +2,12 @@
 # This is a simple build script and will be executed on your CI system if 
 # available.  Otherwise it will execute while your application is stopped
 # before the deploy step.  This script gets executed directly, so it
-# could be python, php, ruby, etc.
+# could be python, php, ruby, etc. 
+if [ ! -d $OPENSHIFT_DATA_DIR/media ]; then
+    mkdir $OPENSHIFT_DATA_DIR/media
+fi
+ln -sf $OPENSHIFT_DATA_DIR/media $OPENSHIFT_REPO_DIR/php/media
+
+if [ ! -d $OPENSHIFT_DATA_DIR/uploads ]; then
+    mkdir $OPENSHIFT_DATA_DIR/uploads
+fi
