--- a/php/app/conf/external_applications.conf
+++ b/php/app/conf/external_applications.conf
@@ -2,7 +2,7 @@
 ghostscript_app = /usr/bin/gs
 
 # Path to ffmpeg binary (http://ffmpeg.mplayerhq.hu/)
-ffmpeg_app = /usr/bin/ffmpeg
+ffmpeg_app = /$OPENSHIFT_DATA_DIR/ffmpeg/ffmpeg-0.11.1/bin/ffmpeg
 
 # Path to qt-faststart binary [part of ffmpeg] (http://ffmpeg.mplayerhq.hu/)
 qt-faststart_app = /usr/bin/qt-faststart
